cluster/homelab/apps/openbooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: openbooks
    namespace: openbooks
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: IRC Book Downloader
        gethomepage.dev/group: Downloaders
        gethomepage.dev/icon: https://raw.githubusercontent.com/evan-buss/openbooks/master/server/app/public/favicon-32x32.png
        gethomepage.dev/name: OpenBooks
